# Cupcpp

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: cupcppConfig.cmake.in
examples/: CMakeLists.txt  basic_task.cpp  channel.cpp  combinators.cpp  generator.cpp  thread_pool.cpp
include/cupcpp/: combinators.hpp  config.hpp  cupcpp.hpp  executor.hpp  generator.hpp  sync.hpp  task.hpp
tests/: CMakeLists.txt  test_executor.cpp  test_generator.cpp  test_main.cpp  test_sync.cpp  test_task.cpp
